--- a/bloglist-app/frontend-query/package.json
+++ b/bloglist-app/frontend-query/package.json
@@ -11,7 +11,8 @@
     "test": "jest",
     "test-coverage": "npm test -- --coverage --collectCoverageFrom='src/**/*.{jsx,js}'",
     "cypress:open": "cypress open",
-    "test:e2e": "cypress run"
+    "test:e2e": "cypress run",
+    "prepare": "cd ../.. && husky bloglist-app/frontend-query/.husky"
   },
   "dependencies": {
     "axios": "^1.4.0",
@@ -30,16 +31,23 @@
     "@vitejs/plugin-react": "^4.0.3",
     "cypress": "^13.6.2",
     "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-cypress": "^2.15.1",
     "eslint-plugin-jest": "^27.6.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "husky": "^9.0.11",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "lint-staged": "^15.2.2",
+    "prettier": "3.2.5",
     "vite": "^4.4.5"
   },
   "jest": {
     "testEnvironment": "jsdom"
+  },
+  "lint-staged": {
+    "**/*": ["eslint", "prettier --write --ignore-unknown"]
   }
 }
