pre-commit prettier

--- a/bloglist-app/frontend-query/package.json
+++ b/bloglist-app/frontend-query/package.json
@@ -48,6 +48,8 @@
     "testEnvironment": "jsdom"
   },
   "lint-staged": {
-    "**/*": ["eslint", "prettier --write --ignore-unknown"]
+    "**/*": [
+      "prettier --write --ignore-unknown"
+    ]
   }
 }
