--- a/bloglist-app/frontend-query/package.json
+++ b/bloglist-app/frontend-query/package.json
@@ -48,7 +48,7 @@
     "testEnvironment": "jsdom"
   },
   "lint-staged": {
-    "**/*": [
+    "*.{js, jsx}": [
       "eslint --fix",
       "prettier --write --ignore-unknown"
     ]
