lint-staged pre-commit hook with eslint and prettier test

--- a/bloglist-app/frontend-query/package.json
+++ b/bloglist-app/frontend-query/package.json
@@ -48,7 +48,7 @@
     "testEnvironment": "jsdom"
   },
   "lint-staged": {
-    "*.{js, jsx}": [
+    "bloglist-app/frontend-query/**/*.{js, jsx}": [
       "eslint --fix",
       "prettier --write --ignore-unknown"
     ]
