--- a/bloglist-app/frontend-query/package.json
+++ b/bloglist-app/frontend-query/package.json
@@ -48,8 +48,7 @@
     "testEnvironment": "jsdom"
   },
   "lint-staged": {
-    "**/*": [
-      "prettier --write --ignore-unknown"
-    ]
+    "*.{js, jsx}": "eslint --fix",
+    "**/*": "prettier --write --ignore-unknown"
   }
 }
