--- a/bloglist-app/frontend-query/package.json
+++ b/bloglist-app/frontend-query/package.json
@@ -15,6 +15,7 @@
     "prepare": "cd ../.. && husky bloglist-app/frontend-query/.husky"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.28.4",
     "axios": "^1.4.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
